Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <meta name="author" content="TEDxAdo-Ekiti Team" />
     <meta name="robots" content="index, follow" />
 
+    <meta name="google-sit-verification"
+    content="w0aboNpUEnJFLxWSu-WHDlKNz8--QKLA3Q25y7N1yCo"
+    />
+
     <link rel="icon" href="/logo.svg" type="image/svg+xml" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
